tests/liquid/pos/list-uw01.js
/*@ inspect :: (<l>)/ l |-> list[{number | true}] => void/same */
function inspect(x) {
    var xn = x.next;
    if (typeof (xn) == "reference") {
        return;
    } else {
        return;
    }
}
